--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
