DashBoard is Added

--- a/Client/package.json
+++ b/Client/package.json
@@ -7,10 +7,12 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "dotenv": "^16.0.3",
     "framer-motion": "^8.1.9",
     "i": "^0.3.7",
     "npm": "^9.2.0",
