--- a/Client/package.json
+++ b/Client/package.json
@@ -21,8 +21,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
