--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,2 @@
-REACT_APP_URL_API=https://splitpayserver.onrender.com
+REACT_APP_URL_API=https://victorious-kilt-fox.cyclic.app
 REACT_APP_CLIENT=https://splitpays.netlify.app
